[gd_scene load_steps=13 format=3 uid="uid://bc28m2ismksnh"]

[ext_resource type="Script" path="res://scripts/main_scenes/shop/control.gd" id="1_55ea1"]
[ext_resource type="Texture2D" uid="uid://qoi5rf3bkfcm" path="res://assets/scene_bg/shop.png" id="2_06muu"]
[ext_resource type="Script" path="res://scripts/main_scenes/shop/coins.gd" id="3_7e32l"]
[ext_resource type="Texture2D" uid="uid://pqsq5wgyjtr2" path="res://assets/icons/food/steak.png" id="6_aqxe0"]
[ext_resource type="Texture2D" uid="uid://bhm5huus045ox" path="res://assets/icons/food/sweet.png" id="7_khkrj"]
[ext_resource type="Texture2D" uid="uid://dq85vul6ft4t" path="res://assets/icons/food/cow.png" id="8_s0spk"]
[ext_resource type="Texture2D" uid="uid://dukeg14td56q7" path="res://assets/icons/food/broccoli.png" id="9_v1cju"]
[ext_resource type="Texture2D" uid="uid://dtkkia6ys3bms" path="res://assets/icons/food/carrot.png" id="10_bxufj"]
[ext_resource type="Texture2D" uid="uid://bas8ec8asfrac" path="res://assets/icons/food/fent.png" id="11_kdjjx"]
[ext_resource type="Texture2D" uid="uid://cn4v3o6txk4p3" path="res://assets/minigames/coinflip/coin_heads.png" id="12_nyhsr"]
[ext_resource type="AudioStream" uid="uid://dm65832esy5jq" path="res://music/shop_music.mp3" id="13_i5q7v"]

[sub_resource type="GDScript" id="GDScript_d1c21"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="ShopUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55ea1")

[node name="ShopBackground" type="TextureRect" parent="Control"]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_06muu")
expand_mode = 1

[node name="Coins" type="Label" parent="Control"]
layout_mode = 0
offset_left = 194.0
offset_top = 22.0
offset_right = 457.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
vertical_alignment = 1
script = ExtResource("3_7e32l")

[node name="ErrorLabel" type="Label" parent="Control/Coins"]
visible = false
z_index = 100
layout_mode = 0
offset_left = 452.0
offset_top = 254.0
offset_right = 849.0
offset_bottom = 387.0
theme_override_colors/font_color = Color(0.61339, 0.61339, 0.61339, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "You're Too Poor!"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_d1c21")

[node name="Timer" type="Timer" parent="Control/Coins"]
process_callback = 0
wait_time = 1.5
one_shot = true

[node name="Buy1" type="Button" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 568.0
offset_top = 277.0
offset_right = 718.0
offset_bottom = 331.0
theme_override_font_sizes/font_size = 15
text = "Buy: $15
+20 Food"

[node name="ColorRect" type="ColorRect" parent="Control/Buy1"]
z_index = 10
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy1"]
z_index = 10
position = Vector2(70, -78)
scale = Vector2(0.22815, 0.192215)
texture = ExtResource("6_aqxe0")

[node name="Title" type="Label" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 697.0
offset_top = 33.0
offset_right = 956.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buy2" type="Button" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 751.0
offset_top = 278.0
offset_right = 901.0
offset_bottom = 332.0
theme_override_font_sizes/font_size = 15
text = "Buy: $10
+10 Food  +5 Fun"

[node name="ColorRect" type="ColorRect" parent="Control/Buy2"]
z_index = 10
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy2"]
z_index = 10
position = Vector2(72, -76)
scale = Vector2(0.204138, 0.204138)
texture = ExtResource("7_khkrj")

[node name="Buy4" type="Button" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 569.0
offset_top = 524.0
offset_right = 719.0
offset_bottom = 578.0
theme_override_font_sizes/font_size = 15
text = "Buy: $550
+90 Food"

[node name="ColorRect" type="ColorRect" parent="Control/Buy4"]
z_index = 10
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy4"]
z_index = 10
position = Vector2(76, -97)
scale = Vector2(0.316741, 0.316741)
texture = ExtResource("8_s0spk")

[node name="Buy3" type="Button" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 935.0
offset_top = 278.0
offset_right = 1085.0
offset_bottom = 343.0
theme_override_font_sizes/font_size = 15
text = "Buy: $23
+30 Food +5 Health
 -5 Fun"

[node name="ColorRect" type="ColorRect" parent="Control/Buy3"]
z_index = 10
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy3"]
z_index = 10
position = Vector2(73, -72)
scale = Vector2(0.191741, 0.191741)
texture = ExtResource("9_v1cju")

[node name="Buy5" type="Button" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 752.0
offset_top = 525.0
offset_right = 902.0
offset_bottom = 579.0
theme_override_font_sizes/font_size = 15
text = "Buy: $19
+10 Food +10 Health"

[node name="ColorRect" type="ColorRect" parent="Control/Buy5"]
z_index = 10
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy5"]
z_index = 10
position = Vector2(71, -82)
scale = Vector2(0.234155, 0.234155)
texture = ExtResource("10_bxufj")

[node name="Buy6" type="Button" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 936.0
offset_top = 525.0
offset_right = 1086.0
offset_bottom = 579.0
theme_override_font_sizes/font_size = 15
text = "Buy: $423
+69 Fun -15 Health"

[node name="ColorRect" type="ColorRect" parent="Control/Buy6"]
z_index = 10
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy6"]
z_index = 10
position = Vector2(80, -75)
scale = Vector2(0.28866, 0.28866)
texture = ExtResource("11_kdjjx")

[node name="GoBack" type="Button" parent="Control"]
z_index = 10
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 106.0
offset_bottom = 89.0
text = "Go Back"

[node name="CoinSprite" type="Sprite2D" parent="Control"]
position = Vector2(157.357, 43.4375)
scale = Vector2(0.0523333, 0.0523333)
texture = ExtResource("12_nyhsr")

[node name="Timer" type="Timer" parent="Control"]
process_callback = 0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_i5q7v")
autoplay = true

[connection signal="timeout" from="Control/Coins/Timer" to="Control/Coins" method="_on_timer_timeout"]
[connection signal="pressed" from="Control/Buy1" to="Control/Coins" method="_on_buy_1_pressed"]
[connection signal="pressed" from="Control/Buy2" to="Control/Coins" method="_on_buy_2_pressed"]
[connection signal="pressed" from="Control/Buy4" to="Control/Coins" method="_on_buy_4_pressed"]
[connection signal="pressed" from="Control/Buy3" to="Control/Coins" method="_on_buy_3_pressed"]
[connection signal="pressed" from="Control/Buy5" to="Control/Coins" method="_on_buy_5_pressed"]
[connection signal="pressed" from="Control/Buy6" to="Control/Coins" method="_on_buy_6_pressed"]
[connection signal="pressed" from="Control/GoBack" to="Control" method="_on_go_back_pressed"]
[connection signal="timeout" from="Control/Timer" to="Control" method="_on_timer_timeout"]
